--- a/Meiryo.css
+++ b/Meiryo.css
@@ -1,3 +1,11 @@
+/*無指定*/
+
+html[lang="ja"] body,
+html[lang="ja"] body *,
+body[lang="ja"] * {
+    font-family: "Meiryo", "メイリオ", "Trebuchet MS", "Arial", "Helvetica" !important;
+}
+
 /*日本語*/
 
 html[lang="ja"] body,
@@ -6,11 +14,10 @@ body[lang="ja"] * {
     font-family: "Meiryo", "メイリオ", "Trebuchet MS", "Arial", "Helvetica" !important;
 }
 
+/*英語*/
 
-/*日本語でない*/
-
-html:not([lang="ja"]) body,
-html:not([lang="ja"]) body *,
-body:not([lang="ja"]) * {
+html[lang="en"] body,
+html[lang="en"] body *,
+body[lang="en"] * {
     font-family: "Trebuchet MS", "Arial", "Helvetica" !important;
 }
